welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:8: error: '(' expected but 'if' found.
  if if (a<=19 && a>=13) {
     ^loneTeen:11: error: illegal start of simple expression
} 
^